--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/style.css">
 
+
 </head>
 
 <body class="">
@@ -79,7 +80,7 @@
         <!--Content-->
         <div class="container">
             <div class="row mt-4">
-                <!--Left side Menu-->
+                <!--Left side Category-->
                 <div class="col-lg-3">
                     <div class="line-behind-title-text">
                         <h2 class="background"><span>Category</span></h2>
@@ -232,7 +233,7 @@
                         </nav>
                     </div>
                     <!--Hot Products-->
-                    <div class="mt-4">
+                    <div class="">
                         <div class="line-behind-title-text">
                             <h2 class="background"><span>Hot Products</span></h2>
                         </div>
@@ -241,7 +242,7 @@
                                 <div class="carousel-item active">
                                     <div class="row">
                                         <div class="col-sm-4">
-                                            <div class="card bg-info">
+                                            <div class="card card-bg-hot">
                                                 <img class="card-img-top" src="assets/img/boreal_griffin.png" alt="Card image cap">
                                                 <div class="card-body text-center">
                                                     <h5 class="card-title">Boreal Griffin</h5>
@@ -251,7 +252,7 @@
                                             </div>
                                         </div>
                                         <div class="col-sm-4">
-                                            <div class="card bg-info">
+                                            <div class="card card-bg-hot">
                                                 <img class="card-img-top" src="assets/img/boreal_griffin.png" alt="Card image cap">
                                                 <div class="card-body text-center">
                                                     <h5 class="card-title">Boreal Griffin</h5>
@@ -261,7 +262,7 @@
                                             </div>
                                         </div>
                                         <div class="col-sm-4">
-                                            <div class="card bg-info">
+                                            <div class="card card-bg-hot">
                                                 <img class="card-img-top" src="assets/img/boreal_griffin.png" alt="Card image cap">
                                                 <div class="card-body text-center">
                                                     <h5 class="card-title">Boreal Griffin</h5>
@@ -275,7 +276,7 @@
                                 <div class="carousel-item">
                                     <div class="row">
                                         <div class="col-sm-4">
-                                            <div class="card bg-dark">
+                                            <div class="card card-bg-hot">
                                                 <img class="card-img-top" src="assets/img/boreal_griffin.png" alt="Card image cap">
                                                 <div class="card-body text-center">
                                                     <h5 class="card-title">Boreal Griffin</h5>
@@ -285,7 +286,7 @@
                                             </div>
                                         </div>
                                         <div class="col-sm-4">
-                                            <div class="card bg-dark">
+                                            <div class="card card-bg-hot">
                                                 <img class="card-img-top" src="assets/img/boreal_griffin.png" alt="Card image cap">
                                                 <div class="card-body text-center">
                                                     <h5 class="card-title">Boreal Griffin</h5>
@@ -295,7 +296,7 @@
                                             </div>
                                         </div>
                                         <div class="col-sm-4">
-                                            <div class="card bg-dark">
+                                            <div class="card card-bg-hot">
                                                 <img class="card-img-top" src="assets/img/boreal_griffin.png" alt="Card image cap">
                                                 <div class="card-body text-center">
                                                     <h5 class="card-title">Boreal Griffin</h5>
@@ -319,31 +320,31 @@
                     </div>
                 </div>
                 <!--Right side Commercial wall-->
-                <div class="col-lg-2 mt-4">
+                <div class="col-lg-2 mt-5">
                     <div class="container bg-deep-grey">
-                        <div class="row mt-3">
-                            <div class="col-12 col-md-6 col-lg-12 mt-2">
+                        <div class="row">
+                            <div class="col-lg-12 col-md-6">
                                 <div class="product-image-wrapper">
                                     <a href="https://shopee.tw/" target="_blank">
                                         <img src="assets/img/commercial_1.png" alt="" class="img-fluid">
                                     </a>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-6 col-lg-12 ">
+                            <div class="col-lg-12 col-md-6">
                                 <div class="product-image-wrapper">
                                     <a href="https://tw.msi.com/" target="_blank">
                                         <img src="assets/img/commercial_2.png" alt="" class="img-fluid">
                                     </a>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-6 col-lg-12 ">
+                            <div class="col-lg-12 col-md-6">
                                 <div class="product-image-wrapper">
                                     <a href="https://magic.wizards.com/en/articles" target="_blank">
                                         <img src="assets/img/commercial_3.png" alt="" class="img-fluid">
                                     </a>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-6 col-lg-12 ">
+                            <div class="col-lg-12 col-md-6">
                                 <div class="product-image-wrapper">
                                     <a href="https://www.twitch.tv/" target="_blank">
                                         <img src="assets/img/commercial_4.png" alt="" class="img-fluid">
@@ -355,7 +356,7 @@
                 </div>
             </div>
             <!--Comment box-->
-            <div class="center mt-5 mb-5">
+            <div class="center mt-5">
                 <div class="line-behind-title-text">
                     <h2 class="background"><span>Comment</span></h2>
                     <form>
@@ -380,11 +381,167 @@
                 </div>
             </div>
         </div>
+        <!--Footer-->
+        <footer class="module_footer mt-5">
+            <!--main-->
+            <div class="row">
+                <!--Socials-->
+                <div class="col-md-12 col-lg-6">
+                    <div class="socials">
+                        <h5>SOCIAL</h5>
+                        <ul>
+                            <li>
+                                <a href="https://www.facebook.com/MOSSOMOSSOSTRING/" target="_blank">
+                                    <!--?xml version="1.0" encoding="utf-8"?-->
+                                    <!-- Generator: Adobe Illustrator 22.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                                        x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;"
+                                        xml:space="preserve">
+                                        <style type="text/css">
+                                            .st0 {
+                                                fill: #FCFCFC;
+                                            }
+                                        </style>
+                                        <title></title>
+                                        <path class="st0" d="M483.8,0H28.2C12.6,0,0,12.6,0,28.2l0,0v455.7C0,499.4,12.6,512,28.2,512l0,0h245.8V314.9h-66.6v-79.4h66.6
+                      v-56.3c-0.2-2.3-0.3-5.1-0.3-7.8c0-52.3,42.4-94.7,94.7-94.7c1.9,0,3.8,0.1,5.7,0.2l-0.3,0h58.9v71.7h-41
+                      c-33.3,0-38.4,15.4-38.4,38.4v48.6h76.8l-10.2,79.4h-66.6V512h130.6c15.6,0,28.2-12.6,28.2-28.2l0,0V28.2C512,12.6,499.4,0,483.8,0
+                      L483.8,0L483.8,0z"></path>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://www.facebook.com/MOSSOMOSSOSTRING/" target="_blank">
+                                    <!-- <?xml version="1.0" encoding="utf-8"?> -->
+                                    <!-- Generator: Adobe Illustrator 23.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                                        x="0px" y="0px" viewBox="0 0 448 512" style="enable-background:new 0 0 400 512;"
+                                        xml:space="preserve">
+                                        <style type="text/css">
+                                            .st0 {
+                                                fill: #FCFCFC;
+                                            }
+                                        </style>
+                                        <title></title>
+                                        <path class="st0" d="M400,32H48C21.5,32,0,53.5,0,80v352c0,26.5,21.5,48,48,48h352c26.5,0,48-21.5,48-48V80C448,53.5,426.5,32,400,32z
+	 M351.1,190.8c0.2,2.8,0.2,5.7,0.2,8.5c0,86.7-66,186.6-186.6,186.6c-37.2,0-71.7-10.8-100.7-29.4c5.3,0.6,10.4,0.8,15.8,0.8
+	c30.7,0,58.9-10.4,81.4-28c-28.8-0.6-53-19.5-61.3-45.5c10.1,1.5,19.2,1.5,29.6-1.2c-30-6.1-52.5-32.5-52.5-64.4v-0.8
+	c8.7,4.9,18.9,7.9,29.6,8.3c-18.3-12.2-29.2-32.7-29.2-54.6c0-12.2,3.2-23.4,8.9-33.1c32.3,39.8,80.8,65.8,135.2,68.6
+	c-9.3-44.5,24-80.6,64-80.6c18.9,0,35.9,7.9,47.9,20.7c14.8-2.8,29-8.3,41.6-15.8c-4.9,15.2-15.2,28-28.8,36.1
+	c13.2-1.4,26-5.1,37.8-10.2C375.1,169.9,363.9,181.5,351.1,190.8z" />
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://www.facebook.com/MOSSOMOSSOSTRING/" target="_blank">
+                                    <!-- <?xml version="1.0" encoding="utf-8"?> -->
+                                    <!-- Generator: Adobe Illustrator 23.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                                        x="0px" y="0px" viewBox="0 0 448 512" style="enable-background:new 0 0 448 512;"
+                                        xml:space="preserve">
+                                        <style type="text/css">
+                                            .st0 {
+                                                fill: #FCFCFC;
+                                            }
+                                        </style>
+                                        <title></title>
+                                        <path class="st0" d="M40.1,32L10,108.9v314.3h107V480h60.2l56.8-56.8h87l117-117V32H40.1z M397.9,286.1L331,353H224l-56.8,56.8V353H76.9V72.1
+                                            h321V286.1z M331,149v116.9h-40.1V149H331z M224,149v116.9h-40.1V149H224z" />
+                                    </svg>
+
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://www.facebook.com/MOSSOMOSSOSTRING/" target="_blank">
+                                    <!-- <?xml version="1.0" encoding="utf-8"?> -->
+                                    <!-- Generator: Adobe Illustrator 23.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                                        x="0px" y="0px" viewBox="0 0 576 512" style="enable-background:new 0 0 576 512;"
+                                        xml:space="preserve">
+                                        <style type="text/css">
+                                            .st0 {
+                                                fill: #FCFCFC;
+                                            }
+                                        </style>
+                                        <title></title>
+                                        <path class="st0" d="M549.7,124.1c-6.3-23.7-24.8-42.3-48.3-48.6C458.8,64,288,64,288,64S117.2,64,74.6,75.5c-23.5,6.3-42,24.9-48.3,48.6
+                                            c-11.4,42.9-11.4,132.3-11.4,132.3s0,89.4,11.4,132.3c6.3,23.6,24.8,41.5,48.3,47.8C117.2,448,288,448,288,448s170.8,0,213.4-11.5
+                                            c23.5-6.3,42-24.2,48.3-47.8c11.4-42.9,11.4-132.3,11.4-132.3S561.1,166.9,549.7,124.1z M232.1,337.6V175.2l142.7,81.2L232.1,337.6
+                                            L232.1,337.6z" />
+                                    </svg>
+
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://www.facebook.com/MOSSOMOSSOSTRING/" target="_blank">
+                                    <!-- <?xml version="1.0" encoding="utf-8"?> -->
+                                    <!-- Generator: Adobe Illustrator 23.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                                        x="0px" y="0px" viewBox="0 0 448 512" style="enable-background:new 0 0 448 512;"
+                                        xml:space="preserve">
+                                        <style type="text/css">
+                                            .st0 {
+                                                fill: #FCFCFC;
+                                            }
+                                        </style>
+                                        <title></title>
+                                        <path class="st0" d="M224.1,141c-63.6,0-114.9,51.3-114.9,114.9s51.3,114.9,114.9,114.9S339,319.5,339,255.9S287.7,141,224.1,141z M224.1,330.6
+	c-41.1,0-74.7-33.5-74.7-74.7s33.5-74.7,74.7-74.7s74.7,33.5,74.7,74.7S265.2,330.6,224.1,330.6L224.1,330.6z M370.5,136.3
+	c0,14.9-12,26.8-26.8,26.8c-14.9,0-26.8-12-26.8-26.8s12-26.8,26.8-26.8S370.5,121.5,370.5,136.3z M446.6,163.5
+	c-1.7-35.9-9.9-67.7-36.2-93.9c-26.2-26.2-58-34.4-93.9-36.2c-37-2.1-147.9-2.1-184.9,0C95.8,35.1,64,43.3,37.7,69.5
+	s-34.4,58-36.2,93.9c-2.1,37-2.1,147.9,0,184.9c1.7,35.9,9.9,67.7,36.2,93.9s58,34.4,93.9,36.2c37,2.1,147.9,2.1,184.9,0
+	c35.9-1.7,67.7-9.9,93.9-36.2c26.2-26.2,34.4-58,36.2-93.9C448.7,311.3,448.7,200.5,446.6,163.5L446.6,163.5z M398.8,388
+	c-7.8,19.6-22.9,34.7-42.6,42.6c-29.5,11.7-99.5,9-132.1,9s-102.7,2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6
+	c-11.7-29.5-9-99.5-9-132.1s-2.6-102.7,9-132.1c7.8-19.6,22.9-34.7,42.6-42.6c29.5-11.7,99.5-9,132.1-9s102.7-2.6,132.1,9
+	c19.6,7.8,34.7,22.9,42.6,42.6c11.7,29.5,9,99.5,9,132.1S410.5,358.6,398.8,388z" />
+                                    </svg>
+
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <!--Submenu-->
+                <div class="col-md-12 col-lg-6">
+                    <div class="submenu row">
+                        <div class="content col">
+                            <h5>Find</h5>
+                            <ul>
+                                <li><a class="" href="https://forums.mtgarena.com">Articles</a></li>
+                                <li><a class="" href="https://forums.mtgarena.com">Forums</a></li>
+                                <li><a class="" href="https://forums.mtgarena.com">Formats</a></li>
+                                <li><a class="" href="https://forums.mtgarena.com">Rules</a></li>
+                            </ul>
+                        </div>
+                        <div class="content col">
+                            <h5>Company</h5>
+                            <ul>
+                                <li><a class="" href="https://forums.mtgarena.com">About</a></li>
+                                <li><a class="" href="https://forums.mtgarena.com">Careers</a></li>
+                                <li><a class="" href="https://forums.mtgarena.com">Support</a></li>
+                                <li><a class="" href="https://forums.mtgarena.com">Wizards Play Network</a></li>
+                            </ul>
+                        </div>
+                        <div class="content col">
+                            <h5>Brands</h5>
+                            <ul>
+                                <li><a class="" href="https://forums.mtgarena.com">Avalon Hill</a></li>
+                                <li><a class="" href="https://forums.mtgarena.com">Dungeons</a></li>
+                                <li><a class="" href="https://forums.mtgarena.com">Duel Masters</a></li>
+                                <li><a class="" href="https://forums.mtgarena.com">Magic</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--copyrights-->
+            <div class="copyrights">
+                <div class="wrapper">
+                    <p>© 2018 Copyright : JZ.com</p>
+                </div>
+            </div>
+        </footer>
     </div>
-
-    </div>
-
-
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
